[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/BattleCam.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CurrentCam.gd" type="Script" id=2]

[node name="BattleCam" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )
playerTypes = [ 1, 1 ]

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 100
current = true
zoom = Vector2( 0.75, 0.75 )
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 2 )

[node name="EndTurnButton" type="Button" parent="Camera2D"]
margin_left = 308.477
margin_top = 197.72
margin_right = 375.477
margin_bottom = 217.72
text = "End Turn"

[node name="ActionButtons" type="GridContainer" parent="Camera2D"]
visible = false
margin_left = -363.0
margin_top = -200.0
margin_right = -220.0
margin_bottom = 193.0

[node name="ActionButton1" type="Button" parent="Camera2D/ActionButtons"]
margin_right = 143.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ActionButton2" type="Button" parent="Camera2D/ActionButtons"]
margin_top = 24.0
margin_right = 143.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="ActionButton3" type="Button" parent="Camera2D/ActionButtons"]
margin_top = 48.0
margin_right = 143.0
margin_bottom = 68.0
size_flags_horizontal = 3

[node name="ActionButton4" type="Button" parent="Camera2D/ActionButtons"]
margin_top = 72.0
margin_right = 143.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="EndScreen" type="GridContainer" parent="Camera2D"]
visible = false
margin_left = -34.0
margin_top = 173.0
margin_right = 78.0
margin_bottom = 209.0

[node name="ExitButton" type="Button" parent="Camera2D/EndScreen"]
margin_right = 77.0
margin_bottom = 20.0
text = "Exit Battle"

[connection signal="pressed" from="Camera2D/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="Camera2D/ActionButtons/ActionButton1" to="." method="_on_ActionButton1_pressed"]
[connection signal="pressed" from="Camera2D/ActionButtons/ActionButton2" to="." method="_on_ActionButton2_pressed"]
[connection signal="pressed" from="Camera2D/ActionButtons/ActionButton3" to="." method="_on_ActionButton3_pressed"]
[connection signal="pressed" from="Camera2D/ActionButtons/ActionButton4" to="." method="_on_ActionButton4_pressed"]
[connection signal="pressed" from="Camera2D/EndScreen/ExitButton" to="." method="_on_ExitButton_pressed"]
